wip: working tree state before P0 auth fixes
Co-authored-by: Cursor <cursoragent@cursor.com>